--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/logo.png" />
+    <link rel="icon" href="/fourier-transform-visualization/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fourier Transform</title>
-    <script type="module" crossorigin src="/assets/index.3088d936.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.f11d89fd.js">
-    <link rel="stylesheet" href="/assets/index.c71c86a5.css">
+    <script type="module" crossorigin src="/fourier-transform-visualization/assets/index.4b85dbae.js"></script>
+    <link rel="modulepreload" href="/fourier-transform-visualization/assets/vendor.f11d89fd.js">
+    <link rel="stylesheet" href="/fourier-transform-visualization/assets/index.c71c86a5.css">
   </head>
   <body>
     <div id="app"></div>
