--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/fourier-transform-visualization/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fourier Transform</title>
-    <script type="module" crossorigin src="/fourier-transform-visualization/assets/index.ec0549cb.js"></script>
-    <link rel="modulepreload" href="/fourier-transform-visualization/assets/vendor.6cf98e60.js">
-    <link rel="stylesheet" href="/fourier-transform-visualization/assets/index.84707d1d.css">
-  </head>
-  <body>
+
+    <script type="text/javascript">
+        // Single Page Apps for GitHub Pages
+        // MIT License
+        // https://github.com/rafgraph/spa-github-pages
+        const l = window.location
+        if (l.search[1] === '/') {
+            const decoded = l.search.slice(1).split('&')
+                .map(s => s.replace(/~and~/g, '&')).join('?')
+
+            window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash)
+        }
+    </script>
+  <script type="module" crossorigin src="/fourier-transform-visualization/assets/index.ec0549cb.js"></script>
+  <link rel="modulepreload" href="/fourier-transform-visualization/assets/vendor.6cf98e60.js">
+  <link rel="stylesheet" href="/fourier-transform-visualization/assets/index.84707d1d.css">
+</head>
+
+<body>
     <div id="app"></div>
     
-  </body>
+</body>
+
 </html>
