--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fourier Transform</title>
-  </head>
-  <body>
+
+    <script type="text/javascript">
+        // Single Page Apps for GitHub Pages
+        // MIT License
+        // https://github.com/rafgraph/spa-github-pages
+        const l = window.location
+        if (l.search[1] === '/') {
+            const decoded = l.search.slice(1).split('&')
+                .map(s => s.replace(/~and~/g, '&')).join('?')
+
+            window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash)
+        }
+    </script>
+</head>
+
+<body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-  </body>
+</body>
+
 </html>
